@@ -3,12 +3,13 @@ package org.acme.foodpackaging.persistence.upload;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
+import jakarta.persistence.PersistenceException;
 import jakarta.transaction.Transactional;
+import org.acme.foodpackaging.exception.UploadDataException;
 import org.acme.foodpackaging.domain.Job;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.smallrye.config._private.ConfigLogging.log;
 import static org.acme.foodpackaging.sql.SqlQueries.*;
@@ -16,14 +17,20 @@ import static org.acme.foodpackaging.sql.SqlQueries.*;
 @ApplicationScoped
 public class UploadDataService {
 
+    private final EntityManager entityManager;
+    private final String ksk;
+    private final String krca;
+
     @Inject
-    EntityManager entityManager;
-
-    @ConfigProperty(name = "ksk")
-    String ksk;
-
-    @ConfigProperty(name = "krca")
-    String krca;
+    public UploadDataService(
+            EntityManager entityManager,
+            @ConfigProperty(name = "ksk") String ksk,
+            @ConfigProperty(name = "krca") String krca
+    ) {
+        this.entityManager = entityManager;
+        this.ksk = ksk;
+        this.krca = krca;
+    }
 
     /**
      * Отправляет задачи в работу (UPDATE_WORK + процедура)
@@ -33,7 +40,7 @@ public class UploadDataService {
     public void sendToWork(List<Job> jobs) {
         List<Job> jobsToProcess = jobs.stream()
                 .filter(job -> job.getSnpz() != null)
-                .collect(Collectors.toList());
+                .toList();
 
         if (jobsToProcess.isEmpty()) {
             log.info("No jobs with non-null snpz to process");
@@ -56,9 +63,9 @@ public class UploadDataService {
                     .executeUpdate();
 
             log.info("Successfully UPDATE_WORK for " + jobsToProcess.size() + " jobs");
-        } catch (Exception e) {
+        } catch (PersistenceException e) {
             log.error("Error UPDATE_WORK", e);
-            throw new RuntimeException("Error UPDATE_WORK", e);
+            throw new UploadDataException("Failed to execute UPDATE_WORK and REFRESH_FASP", e);
         }
     }
 }
